--- a/package.json
+++ b/package.json
@@ -1,13 +1,10 @@
 {
   "scripts": {
-    "start": "concurrently --kill-others  \"npm run json-server\" \"npm run ui\"",
-    "json-server": "json-server data.json",
-    "ui": "cd angular-lists-ui && npm start"
+    "start": "NODE_ENV=production node server.js",
+    "dev": "NODE_ENV=development node server.js"
   },
   "dependencies": {
+    "clone": "^2.1.2",
     "json-server": "^0.17.1"
-  },
-  "devDependencies": {
-    "concurrently": "^7.6.0"
   }
 }
