--- a/angular-lists-ui/package.json
+++ b/angular-lists-ui/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser-dynamic": "^15.1.2",
     "@angular/router": "^15.1.2",
     "@ngneat/until-destroy": "^9.2.3",
+    "ngx-logger": "^5.0.11",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
