Move global styles to separate directory, update theme

--- a/angular-lists-ui/angular.json
+++ b/angular-lists-ui/angular.json
@@ -24,7 +24,7 @@
             "tsConfig": "tsconfig.app.json",
             "inlineStyleLanguage": "scss",
             "assets": ["src/favicon.ico", "src/assets"],
-            "styles": ["src/theme.scss", "src/styles.scss"],
+            "styles": ["src/styles/styles.scss", "src/styles/mat-theme.scss"],
             "scripts": []
           },
           "configurations": {
@@ -87,10 +87,7 @@
             "karmaConfig": "karma.conf.js",
             "inlineStyleLanguage": "scss",
             "assets": ["src/favicon.ico", "src/assets"],
-            "styles": [
-              "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
-              "src/styles.scss"
-            ],
+            "styles": ["src/styles/styles.scss", "src/styles/mat-theme.scss"],
             "scripts": []
           }
         }
